# dol-jara-web

./: .gitignore  remocon.html
docker/doljara-servers/: docker-compose.yml
docker/doljara-servers/db/redis/: redis.conf
docker/doljara-servers/mqtt-broker/mosquitto/config/: mosquitto.conf  pwfile
docker/doljara-servers/service/: Dockerfile  pyproject.toml
docker/doljara-servers/service/app/: service.py
etc/nginx/: nginx.conf
etc/nginx/sites-enabled/: dol-jara
